--- a/dbset.ini
+++ b/dbset.ini
@@ -1,18 +1,29 @@
 [database]
-#type : MySQL,Oracle
 type = MySQL
-host = 192.168.0.100
+host = 192.168.1.31
 port = 3306
-user = root
-passwd = 123456
+user = chart_demo
+passwd = chart_demo
 sid = orcl
 [chart]
-chart_title =  my_chart1
+chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 1
+chart_count = 3
 #---1---------------------------------
-title1 =  chart1
+title1 =  line_demo
 chart_type1 = line
-x1 = SELECT x FROM table
-y1 = SELECT y FROM table
-data1 = SELECT x,y,data FROM table
+x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
+y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+data1 = SELECT date,area,amount FROM chart_demo.t_chart1
+#---2---------------------------------
+title2 = pie_demo
+chart_type2 = pie
+x2 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+y2 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
+data2 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+#---3---------------------------------
+title3 = bar_demo
+chart_type3 = bar
+x3 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+y3 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
+data3 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
