--- a/dbset.ini
+++ b/dbset.ini
@@ -8,7 +8,7 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 3
+chart_count = 4
 #---1---------------------------------
 title1 =  line_demo
 chart_type1 = line
@@ -27,3 +27,9 @@ chart_type3 = bar
 x3 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 y3 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data3 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+#---4---------------------------------
+title4 = calendar_demo
+chart_type4 = calendar
+x4 = SELECT DISTINCT DATE_FORMAT(date, '%%Y') FROM chart_demo.t_calendar
+y4 = SELECT 0
+data4 = SELECT DATE_FORMAT(date, '%%Y-%%m-%%d'),count FROM chart_demo.t_calendar
