--- a/dbset.ini
+++ b/dbset.ini
@@ -8,28 +8,53 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 4
+chart_count = 7
 #---1---------------------------------
 title1 =  line_demo
 chart_type1 = line
 x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data1 = SELECT date,area,amount FROM chart_demo.t_chart1
+style1 = {}
 #---2---------------------------------
 title2 = pie_demo
 chart_type2 = pie
 x2 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 y2 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data2 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+style2 = {}
 #---3---------------------------------
 title3 = bar_demo
 chart_type3 = bar
 x3 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 y3 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data3 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+style3 = {}
 #---4---------------------------------
 title4 = calendar_demo
 chart_type4 = calendar
 x4 = SELECT DISTINCT DATE_FORMAT(date, '%%Y') FROM chart_demo.t_calendar
 y4 = SELECT 0
 data4 = SELECT DATE_FORMAT(date, '%%Y-%%m-%%d'),count FROM chart_demo.t_calendar
+style4 = {'max_':20000,'min_':500,'orient':"horizontal",'is_piecewise':True,'pos_top':"230px",'pos_left':"100px"}
+#---5---------------------------------style5 = {'sort_':"ascending"} or  {'sort_':"descending "}
+title5 = funnel_demo
+chart_type5 = funnel
+x5 = SELECT 0
+y5 = SELECT 0
+data5 = SELECT area,amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+style5 = {'sort_':"descending "}
+#---6---------------------------------
+title6 = gauge_demo
+chart_type6 = gauge
+x6 = SELECT 0
+y6 = SELECT 0
+data6 = SELECT "完成率", 99.99
+style6 = {'font_size':40, 'color':"blue", 'font_family':"Microsoft YaHei"}
+#---7---------------------------------关系图
+title7 = graph_demo
+chart_type7 = graph
+x7 = SELECT DISTINCT node,size FROM chart_demo.t_graph
+y7 = SELECT 0
+data7 = SELECT node,link FROM chart_demo.t_graph
+style7 = {}
