--- a/dbset.ini
+++ b/dbset.ini
@@ -8,7 +8,7 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 8
+chart_count = 14
 #---1--------------------------------- 曲线图
 title1 =  曲线图
 chart_type1 = line
@@ -51,17 +51,59 @@ x6 = SELECT 0
 y6 = SELECT 0
 data6 = SELECT "完成率", 99.99
 style6 = {'font_size':40, 'color':"blue", 'font_family':"Microsoft YaHei"}
-#---7---------------------------------关系图
+#---7---------------------------------关系图1
 title7 = 关系图
 chart_type7 = graph
 x7 = SELECT DISTINCT node,size FROM chart_demo.t_graph
 y7 = SELECT 0
 data7 = SELECT node,link FROM chart_demo.t_graph
 style7 = {}
-#---8---------------------------------关系图
+#---8---------------------------------关系图2
 title8 = 关系图2
 chart_type8 = graph2
 x8 = SELECT name,symbolsize,category,draggable,label,value FROM chart_demo.t_weibo_nodes
 y8 = SELECT NAME FROM chart_demo.t_weibo_categories
 data8 = SELECT source,target FROM chart_demo.t_weibo_links
 style8 = {}
+#---9---------------------------------关系图3
+title9 = 关系图3
+chart_type9 = graph3
+x9 = SELECT id,name,symbolsize,category,label,value,x,y FROM chart_demo.t_les_miserables_nodes
+y9 = SELECT NAME FROM chart_demo.t_les_miserables_categories
+data9 = SELECT id,source,target FROM chart_demo.t_les_miserables_links
+style9 = {}
+#---10---------------------------------关系图4
+title10 = 关系图4
+chart_type10 = graph4
+x10 = SELECT x,y,id,name,symbolsize,attributes FROM chart_demo.t_npmdepgraph_nodes
+y10 = SELECT 0
+data10 = SELECT source,target FROM chart_demo.t_npmdepgraph_links
+style10 = {}
+#---11---------------------------------水球图
+title11 = 水球图
+chart_type11 = liquid
+x11 = SELECT 0
+y11 = SELECT 0
+data11 = SELECT 0.895
+style11 = {'is_outline_show':False}
+#---12---------------------------------平行坐标系
+title12 = 平行坐标系
+chart_type12 = parallel
+x12= SELECT dim,name,type,data from chart_demo.t_parallel_col
+y12 = SELECT 0
+data12 = SELECT data,aqi,pm25,pm10,co,no2,co2,level  from chart_demo.t_parallel_data
+style12 = {}
+#---13---------------------------------极坐标系
+title13 = 极坐标系
+chart_type13 = polar
+x13= SELECT 0
+y13 = SELECT 0
+data13 = SELECT id,count  from chart_demo.t_polar
+style13 = {}
+#---14---------------------------------雷达图
+title14 = 雷达图
+chart_type14 = radar
+x14= SELECT name,max from  chart_demo.t_radar_x order by id
+y14 = SELECT 0
+data14 = SELECT type,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data order by id
+style14 = {}
