--- a/dbset.ini
+++ b/dbset.ini
@@ -8,7 +8,7 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 14
+chart_count = 17
 #---1--------------------------------- 曲线图
 title1 =  曲线图
 chart_type1 = line
@@ -103,7 +103,28 @@ style13 = {}
 #---14---------------------------------雷达图
 title14 = 雷达图
 chart_type14 = radar
-x14= SELECT name,max from  chart_demo.t_radar_x order by id
+x14= SELECT name,max,min from  chart_demo.t_radar_x order by id
 y14 = SELECT 0
-data14 = SELECT type,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data order by id
+data14 = SELECT type,color,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data order by type,id
 style14 = {}
+#---15---------------------------------雷达图2
+title15 = 雷达图2
+chart_type15 = radar
+x15= SELECT name,max,min from  chart_demo.t_radar_x2 order by id
+y15 = SELECT 0
+data15 = SELECT name,color,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data2 order by name,id
+style15 = {}
+#---16---------------------------------桑基图
+title16 = 桑基图
+chart_type16 = sankey
+x16= SELECT name from  chart_demo.t_sankey_x
+y16 = SELECT 0
+data16 = SELECT source,target,value  from chart_demo.t_sankey_data
+style16 = {}
+#---17---------------------------------旭日图
+title17 = 旭日图
+chart_type17 = sunburst
+x17= SELECT 0
+y17 = SELECT 0
+data17 = SELECT tree  from chart_demo.t_sunburst
+style17 = {}
