--- a/dbset.ini
+++ b/dbset.ini
@@ -8,14 +8,14 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 17
+chart_count = 19
 #---1--------------------------------- 曲线图
 title1 =  曲线图
 chart_type1 = line
 x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data1 = SELECT date,area,amount FROM chart_demo.t_chart1
-style1 = {}
+style1 = {type_="max",is_smooth=True,is_show=False}
 #---2---------------------------------饼图
 title2 = 饼图
 chart_type2 = pie
@@ -43,7 +43,7 @@ chart_type5 = funnel
 x5 = SELECT 0
 y5 = SELECT 0
 data5 = SELECT area,amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
-style5 = {'sort_':"descending "}
+style5 = {'sort_':"descending ",'position':"inside"}
 #---6---------------------------------仪表盘
 title6 = 仪表盘
 chart_type6 = gauge
@@ -57,28 +57,28 @@ chart_type7 = graph
 x7 = SELECT DISTINCT node,size FROM chart_demo.t_graph
 y7 = SELECT 0
 data7 = SELECT node,link FROM chart_demo.t_graph
-style7 = {}
+style7 = {'repulsion':4000}
 #---8---------------------------------关系图2
 title8 = 关系图2
 chart_type8 = graph2
 x8 = SELECT name,symbolsize,category,draggable,label,value FROM chart_demo.t_weibo_nodes
 y8 = SELECT NAME FROM chart_demo.t_weibo_categories
 data8 = SELECT source,target FROM chart_demo.t_weibo_links
-style8 = {}
+style8 = {'repulsion':50,'curve':0.2,'label_opts_is_show':False,'legend_opts_is_show':False}
 #---9---------------------------------关系图3
 title9 = 关系图3
 chart_type9 = graph3
 x9 = SELECT id,name,symbolsize,category,label,value,x,y FROM chart_demo.t_les_miserables_nodes
 y9 = SELECT NAME FROM chart_demo.t_les_miserables_categories
 data9 = SELECT id,source,target FROM chart_demo.t_les_miserables_links
-style9 = {}
+style9 = {'layout':"circular",'is_rotate_label':True,'color':"source", 'curve':0.3,'position':"right",'orient':"vertical", 'pos_left':"2%%", 'pos_top':"20%%"}
 #---10---------------------------------关系图4
 title10 = 关系图4
 chart_type10 = graph4
 x10 = SELECT x,y,id,name,symbolsize,attributes FROM chart_demo.t_npmdepgraph_nodes
 y10 = SELECT 0
 data10 = SELECT source,target FROM chart_demo.t_npmdepgraph_links
-style10 = {}
+style10 = {'layout':"none",'is_show':False,'width':0.5, 'curve':0.3, 'opacity':0.7}
 #---11---------------------------------水球图
 title11 = 水球图
 chart_type11 = liquid
@@ -99,32 +99,46 @@ chart_type13 = polar
 x13= SELECT 0
 y13 = SELECT 0
 data13 = SELECT id,count  from chart_demo.t_polar
-style13 = {}
+style13 = {'type_':"scatter",'is_show':False}
 #---14---------------------------------雷达图
 title14 = 雷达图
 chart_type14 = radar
 x14= SELECT name,max,min from  chart_demo.t_radar_x order by id
 y14 = SELECT 0
 data14 = SELECT type,color,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data order by type,id
-style14 = {}
+style14 = {'is_show':True}
 #---15---------------------------------雷达图2
 title15 = 雷达图2
 chart_type15 = radar
 x15= SELECT name,max,min from  chart_demo.t_radar_x2 order by id
 y15 = SELECT 0
 data15 = SELECT name,color,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data2 order by name,id
-style15 = {}
+style15 = {'is_show':False}
 #---16---------------------------------桑基图
 title16 = 桑基图
 chart_type16 = sankey
 x16= SELECT name from  chart_demo.t_sankey_x
 y16 = SELECT 0
 data16 = SELECT source,target,value  from chart_demo.t_sankey_data
-style16 = {}
+style16 = {'opacity':0.2, 'curve':0.5, 'color':"source",'position':"right"}
 #---17---------------------------------旭日图
 title17 = 旭日图
 chart_type17 = sunburst
 x17= SELECT 0
 y17 = SELECT 0
 data17 = SELECT tree  from chart_demo.t_sunburst
-style17 = {}
+style17 = {'highlight_policy':"ancestor",'radius':[0, "95%%"],'sort_':"null",'levels':[{},{"r0": "15%%","r": "35%%","itemStyle": {"borderWidth": 2},"label": {"rotate": "tangential"},},{"r0": "35%%", "r": "70%%", "label": {"align": "right"}},{"r0": "70%%","r": "72%%","label": {"position": "outside", "padding": 3, "silent": False},"itemStyle": {"borderWidth": 3},},],}
+#---18---------------------------------主题河流图
+title18 = 主题河流图
+chart_type18 = themeriver
+x18= SELECT DISTINCT NAME FROM chart_demo.t_themeriver
+y18 = SELECT 0
+data18 = SELECT DATE_FORMAT(DATE,'%%Y/%%m/%%d'),COUNT,NAME  FROM chart_demo.t_themeriver
+style18 = {'type_':"time", 'pos_bottom':"10%%"}
+#---19---------------------------------词云图
+title19 = 词云图
+chart_type19 = wordcloud
+x19= SELECT 0
+y19 = SELECT 0
+data19 = SELECT name,count  from chart_demo.t_wordcloud
+style19 = {'word_size_range':[20, 100]}
