--- a/dbset.ini
+++ b/dbset.ini
@@ -8,14 +8,14 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 19
+chart_count = 21
 #---1--------------------------------- 曲线图
 title1 =  曲线图
 chart_type1 = line
 x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data1 = SELECT date,area,amount FROM chart_demo.t_chart1
-style1 = {type_="max",is_smooth=True,is_show=False}
+style1 = {'type_':"max",'is_smooth':True,'is_show':False}
 #---2---------------------------------饼图
 title2 = 饼图
 chart_type2 = pie
@@ -142,3 +142,17 @@ x19= SELECT 0
 y19 = SELECT 0
 data19 = SELECT name,count  from chart_demo.t_wordcloud
 style19 = {'word_size_range':[20, 100]}
+#---20---------------------------------箱形图
+title20 = 箱形图
+chart_type20 = boxpolt
+x20= SELECT DISTINCT expr FROM chart_demo.t_boxpolt
+y20 = SELECT DISTINCT ab FROM chart_demo.t_boxpolt
+data20 = SELECT expr,ab,counts  from chart_demo.t_boxpolt
+style20 = {}
+#---21---------------------------------涟漪特效散点图
+title21 = 涟漪特效散点图
+chart_type21 = effectscatter
+x21= SELECT x FROM chart_demo.t_effectscatter order by id
+y21 = SELECT 0
+data21 = SELECT counts  from chart_demo.t_effectscatter order by id
+style21 = {}
