--- a/dbset.ini
+++ b/dbset.ini
@@ -8,14 +8,15 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 21
+chart_count = 30
 #---1--------------------------------- 曲线图
 title1 =  曲线图
 chart_type1 = line
 x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
 y1 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 data1 = SELECT date,area,amount FROM chart_demo.t_chart1
-style1 = {'type_':"max",'is_smooth':True,'is_show':False}
+style1 = {'type_':"max",'is_smooth':True,'is_show':False,'opacity':0}
+#'opacity':0.5 面积图
 #---2---------------------------------饼图
 title2 = 饼图
 chart_type2 = pie
@@ -156,3 +157,69 @@ x21= SELECT x FROM chart_demo.t_effectscatter order by id
 y21 = SELECT 0
 data21 = SELECT counts  from chart_demo.t_effectscatter order by id
 style21 = {}
+#---22---------------------------------热力图
+title22 = 热力图
+chart_type22 = heatmap
+x22= SELECT distinct time FROM chart_demo.t_heatmap
+y22 = SELECT distinct week FROM chart_demo.t_heatmap
+data22 = SELECT time,week,temperature  from chart_demo.t_heatmap order by id
+style22 = {}
+#---23---------------------------------K线图
+title23 = K线图
+chart_type23 = kline
+x23= SELECT date FROM chart_demo.t_kline  order by id
+y23 = SELECT 0
+data23 = SELECT start_p,end_p,min_p,max_p  from chart_demo.t_kline order by id
+style23 = {}
+#---24---------------------------------象形柱状图
+title24 = 象形柱状图
+chart_type24 = pictorialbar
+x24= SELECT distinct items  from chart_demo.t_pictorialbar order by items
+y24 = SELECT name,images FROM chart_demo.t_symbol
+data24 = SELECT year,items,count  from chart_demo.t_pictorialbar order by year,items
+style24 = {}
+#---25---------------------------------散点图
+title25 = 散点图
+chart_type25 = scatter
+x25= SELECT distinct items  from chart_demo.t_pictorialbar order by items
+y25 = SELECT 0
+data25 = SELECT year,items,count  from chart_demo.t_pictorialbar order by year,items
+style25 = {}
+#---26---------------------------------层叠多图
+title26 = 层叠多图
+chart_type26 = overlap
+x26= SELECT distinct month  from chart_demo.t_overlap order by id
+y26 = SELECT 0
+data26 = SELECT evaporation,rainfall,temperature from chart_demo.t_overlap order by id
+style26 = {}
+#---27---------------------------------树图
+title27 = 树图
+chart_type27 = tree
+x27= SELECT 0
+y27 = SELECT 0
+data27 = SELECT tree from chart_demo.t_tree
+style27 = {'orient':"LR"}
+#orient: LR左右,RL右左,TB上下,BT下上
+#orient: TB上下,BT下上  时需要配置: 'position':"top",'horizontal_align':"right",'vertical_align':"middle",'rotate':-90
+#---28---------------------------------矩形树图
+title28 = 矩形树图
+chart_type28 = treemap
+x28 = SELECT "演示数据"
+y28 = SELECT 0
+data28 = SELECT tree from chart_demo.t_treemap
+style28 = {}
+#---29---------------------------------地理坐标系
+title29 = 地理坐标系
+chart_type29 = geo
+x29 = SELECT 'china'
+y29 = SELECT 0
+data29 = SELECT province,counts from chart_demo.t_geo where country='china'
+style29 = {'is_piecewise':True,'ChartType':"HEATMAP"}
+#ChartType: None ,EFFECT_SCATTER,HEATMAP
+#---30---------------------------------地理坐标系2
+title30 = 地理坐标系2
+chart_type30 = geo
+x30 = SELECT '广东'
+y30 = SELECT 0
+data30 = SELECT city,counts from chart_demo.t_geo where province='广东' and city is not null
+style30 = {'is_piecewise':True,'ChartType':"EFFECT_SCATTER"}
