--- a/dbset.ini
+++ b/dbset.ini
@@ -8,7 +8,7 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 30
+chart_count = 40
 #---1--------------------------------- 曲线图
 title1 =  曲线图
 chart_type1 = line
@@ -216,10 +216,80 @@ y29 = SELECT 0
 data29 = SELECT province,counts from chart_demo.t_geo where country='china'
 style29 = {'is_piecewise':True,'ChartType':"HEATMAP"}
 #ChartType: None ,EFFECT_SCATTER,HEATMAP
-#---30---------------------------------地理坐标系2
-title30 = 地理坐标系2
+#---30---------------------------------地理坐标系广东
+title30 = 地理坐标系广东
 chart_type30 = geo
 x30 = SELECT '广东'
 y30 = SELECT 0
 data30 = SELECT city,counts from chart_demo.t_geo where province='广东' and city is not null
 style30 = {'is_piecewise':True,'ChartType':"EFFECT_SCATTER"}
+#---31---------------------------------地理坐标系3
+title31 = 地理坐标系3
+chart_type31 = geo_lines
+x31 = SELECT 'china'
+y31 = SELECT start,end from chart_demo.t_geoline
+data31 = SELECT province,counts from chart_demo.t_geo where country='china'
+style31 = {'symbol_size':6,'back_color':"#323c48", 'border_color':"#111", 'dot_color':"red",'line_color':"blue",'curve':0.2}
+#---32---------------------------------地图
+title32 = 地图
+chart_type32 = map
+x32 = SELECT 'china','商家A'
+y32 = SELECT 0
+data32 = SELECT province,counts from chart_demo.t_geo where country='china'
+style32 = {'is_show':False,'max_':200,'is_piecewise':True}
+#---33---------------------------------世界地图
+title33 = 世界地图
+chart_type33 = map
+x33 = SELECT 'world','商家A'
+y33 = SELECT 0
+data33 = SELECT country,counts from chart_demo.t_map 
+style33 = {'is_show':False,'max_':200,'is_piecewise':False}
+#---34---------------------------------广东地图
+title34 = 广东地图
+chart_type34 = map
+x34 = SELECT '广东','商家A'
+y34 = SELECT 0
+data34 = SELECT city,counts from chart_demo.t_geo where province='广东' and city is not null
+style34 = {'is_show':False,'max_':200,'is_piecewise':False}
+#---35---------------------------------3D柱状图
+title35 = 3D柱状图
+chart_type35 = bar3d
+x35 = SELECT distinct time  from chart_demo.t_heatmap order by id 
+y35 = SELECT distinct week  from chart_demo.t_heatmap order by id
+data35 = SELECT week, time,temperature  from chart_demo.t_heatmap order by id
+style35 = {'max_':80}
+#---36---------------------------------堆叠柱状图
+title36 = 堆叠柱状图
+chart_type36 = bar3d_stack
+x36 = SELECT distinct time  from chart_demo.t_bar3d_stack order by id 
+y36 = SELECT distinct week  from chart_demo.t_bar3d_stack order by id
+data36 = SELECT time,week,temperature  from chart_demo.t_bar3d_stack order by id
+style36 = {}
+#---37---------------------------------3D折线图
+title37 = 3D折线图
+chart_type37 = line3d
+x37 = SELECT distinct time  from chart_demo.t_heatmap order by id 
+y37 = SELECT distinct week  from chart_demo.t_heatmap order by id
+data37 = SELECT x,y,z  from chart_demo.t_line3d
+style37 = {'width':100, 'height':100, 'depth':100,'max_':30, 'min_':0,'is_rotate':True,'range_color':"#313695,#4575b4,#74add1,#abd9e9,#e0f3f8,#ffffbf,#fee090,#fdae61,#f46d43,#d73027,#a50026"}
+#---38---------------------------------3D散点图
+title38 = 3D散点图
+chart_type38 = scatter3d
+x38 = SELECT '3D散点图'
+y38 = SELECT 0
+data38 = SELECT time,week,temperature  from chart_demo.t_bar3d_stack order by id
+style38 = {'range_color':"#313695,#4575b4,#74add1,#abd9e9,#e0f3f8,#ffffbf,#fee090,#fdae61,#f46d43,#d73027,#a50026"}
+#---39---------------------------------3D曲面图
+title39 = 3D曲面图
+chart_type39 = surface3d
+x39 = SELECT '3D曲面图'
+y39 = SELECT 0
+data39 = SELECT x,y,z  from chart_demo.t_surface3d
+style39 = {'width':100, 'height':100, 'depth':100,'max_':3, 'min_':-3,'range_color':"#313695,#4575b4,#74add1,#abd9e9,#e0f3f8,#ffffbf,#fee090,#fdae61,#f46d43,#d73027,#a50026"}
+#---40---------------------------------地球地图
+title40 = 地球地图
+chart_type40 = mapglobe
+x40 = SELECT 'World Population'
+y40 = SELECT 0
+data40 = SELECT country,value from chart_demo.t_mapglobe
+style40 = {'maptype':"world",'is_map_symbol_show':False,'is_show':False,'is_calculable':True,'range_color':"lightskyblue,yellow,orangered"}
