--- a/dbset.ini
+++ b/dbset.ini
@@ -8,8 +8,9 @@ sid = orcl
 [chart]
 chart_title =  chart_demo
 all_in_one_page = 1
-chart_count = 40
+chart_count = 42
 #---1--------------------------------- 曲线图
+switch1 = ON
 title1 =  曲线图
 chart_type1 = line
 x1 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
@@ -18,6 +19,7 @@ data1 = SELECT date,area,amount FROM chart_demo.t_chart1
 style1 = {'type_':"max",'is_smooth':True,'is_show':False,'opacity':0}
 #'opacity':0.5 面积图
 #---2---------------------------------饼图
+switch2 = ON
 title2 = 饼图
 chart_type2 = pie
 x2 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
@@ -25,6 +27,7 @@ y2 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data2 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 style2 = {}
 #---3---------------------------------柱状图
+switch3 = ON
 title3 = 柱状图
 chart_type3 = bar
 x3 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
@@ -32,20 +35,24 @@ y3 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
 data3 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 style3 = {}
 #---4---------------------------------日历
+switch4 = ON
 title4 = 日历
 chart_type4 = calendar
 x4 = SELECT DISTINCT DATE_FORMAT(date, '%%Y') FROM chart_demo.t_calendar
 y4 = SELECT 0
 data4 = SELECT DATE_FORMAT(date, '%%Y-%%m-%%d'),count FROM chart_demo.t_calendar
 style4 = {'max_':20000,'min_':500,'orient':"horizontal",'is_piecewise':True,'pos_top':"230px",'pos_left':"100px"}
-#---5---------------------------------漏斗图 style5 = {'sort_':"ascending"} or  {'sort_':"descending "}
+#---5---------------------------------漏斗图 
+switch5 = ON
 title5 = 漏斗图
 chart_type5 = funnel
 x5 = SELECT 0
 y5 = SELECT 0
 data5 = SELECT area,amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
 style5 = {'sort_':"descending ",'position':"inside"}
+#style5 = {'sort_':"ascending"} or  {'sort_':"descending "}
 #---6---------------------------------仪表盘
+switch6 = ON
 title6 = 仪表盘
 chart_type6 = gauge
 x6 = SELECT 0
@@ -53,6 +60,7 @@ y6 = SELECT 0
 data6 = SELECT "完成率", 99.99
 style6 = {'font_size':40, 'color':"blue", 'font_family':"Microsoft YaHei"}
 #---7---------------------------------关系图1
+switch7 = ON
 title7 = 关系图
 chart_type7 = graph
 x7 = SELECT DISTINCT node,size FROM chart_demo.t_graph
@@ -60,6 +68,7 @@ y7 = SELECT 0
 data7 = SELECT node,link FROM chart_demo.t_graph
 style7 = {'repulsion':4000}
 #---8---------------------------------关系图2
+switch8 = ON
 title8 = 关系图2
 chart_type8 = graph2
 x8 = SELECT name,symbolsize,category,draggable,label,value FROM chart_demo.t_weibo_nodes
@@ -67,13 +76,15 @@ y8 = SELECT NAME FROM chart_demo.t_weibo_categories
 data8 = SELECT source,target FROM chart_demo.t_weibo_links
 style8 = {'repulsion':50,'curve':0.2,'label_opts_is_show':False,'legend_opts_is_show':False}
 #---9---------------------------------关系图3
+switch9 = ON
 title9 = 关系图3
 chart_type9 = graph3
 x9 = SELECT id,name,symbolsize,category,label,value,x,y FROM chart_demo.t_les_miserables_nodes
 y9 = SELECT NAME FROM chart_demo.t_les_miserables_categories
 data9 = SELECT id,source,target FROM chart_demo.t_les_miserables_links
-style9 = {'layout':"circular",'is_rotate_label':True,'color':"source", 'curve':0.3,'position':"right",'orient':"vertical", 'pos_left':"2%%", 'pos_top':"20%%"}
+style9 = {'layout':"circular",'is_rotate_label':True,'color':"source", 'curve':0.3,'position':"right",'orient':"vertical", 'legend_pos_left':"2%%", 'legend_pos_top':"20%%"}
 #---10---------------------------------关系图4
+switch10 = ON
 title10 = 关系图4
 chart_type10 = graph4
 x10 = SELECT x,y,id,name,symbolsize,attributes FROM chart_demo.t_npmdepgraph_nodes
@@ -81,6 +92,7 @@ y10 = SELECT 0
 data10 = SELECT source,target FROM chart_demo.t_npmdepgraph_links
 style10 = {'layout':"none",'is_show':False,'width':0.5, 'curve':0.3, 'opacity':0.7}
 #---11---------------------------------水球图
+switch11 = ON
 title11 = 水球图
 chart_type11 = liquid
 x11 = SELECT 0
@@ -88,6 +100,7 @@ y11 = SELECT 0
 data11 = SELECT 0.895
 style11 = {'is_outline_show':False}
 #---12---------------------------------平行坐标系
+switch12 = ON
 title12 = 平行坐标系
 chart_type12 = parallel
 x12= SELECT dim,name,type,data from chart_demo.t_parallel_col
@@ -95,6 +108,7 @@ y12 = SELECT 0
 data12 = SELECT data,aqi,pm25,pm10,co,no2,co2,level  from chart_demo.t_parallel_data
 style12 = {}
 #---13---------------------------------极坐标系
+switch13 = ON
 title13 = 极坐标系
 chart_type13 = polar
 x13= SELECT 0
@@ -102,6 +116,7 @@ y13 = SELECT 0
 data13 = SELECT id,count  from chart_demo.t_polar
 style13 = {'type_':"scatter",'is_show':False}
 #---14---------------------------------雷达图
+switch14 = ON
 title14 = 雷达图
 chart_type14 = radar
 x14= SELECT name,max,min from  chart_demo.t_radar_x order by id
@@ -109,6 +124,7 @@ y14 = SELECT 0
 data14 = SELECT type,color,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data order by type,id
 style14 = {'is_show':True}
 #---15---------------------------------雷达图2
+switch15 = ON
 title15 = 雷达图2
 chart_type15 = radar
 x15= SELECT name,max,min from  chart_demo.t_radar_x2 order by id
@@ -116,6 +132,7 @@ y15 = SELECT 0
 data15 = SELECT name,color,c1,c2,c3,c4,c5,c6  from chart_demo.t_radar_data2 order by name,id
 style15 = {'is_show':False}
 #---16---------------------------------桑基图
+switch16 = ON
 title16 = 桑基图
 chart_type16 = sankey
 x16= SELECT name from  chart_demo.t_sankey_x
@@ -123,6 +140,7 @@ y16 = SELECT 0
 data16 = SELECT source,target,value  from chart_demo.t_sankey_data
 style16 = {'opacity':0.2, 'curve':0.5, 'color':"source",'position':"right"}
 #---17---------------------------------旭日图
+switch17 = ON
 title17 = 旭日图
 chart_type17 = sunburst
 x17= SELECT 0
@@ -130,6 +148,7 @@ y17 = SELECT 0
 data17 = SELECT tree  from chart_demo.t_sunburst
 style17 = {'highlight_policy':"ancestor",'radius':[0, "95%%"],'sort_':"null",'levels':[{},{"r0": "15%%","r": "35%%","itemStyle": {"borderWidth": 2},"label": {"rotate": "tangential"},},{"r0": "35%%", "r": "70%%", "label": {"align": "right"}},{"r0": "70%%","r": "72%%","label": {"position": "outside", "padding": 3, "silent": False},"itemStyle": {"borderWidth": 3},},],}
 #---18---------------------------------主题河流图
+switch18 = ON
 title18 = 主题河流图
 chart_type18 = themeriver
 x18= SELECT DISTINCT NAME FROM chart_demo.t_themeriver
@@ -137,6 +156,7 @@ y18 = SELECT 0
 data18 = SELECT DATE_FORMAT(DATE,'%%Y/%%m/%%d'),COUNT,NAME  FROM chart_demo.t_themeriver
 style18 = {'type_':"time", 'pos_bottom':"10%%"}
 #---19---------------------------------词云图
+switch19 = ON
 title19 = 词云图
 chart_type19 = wordcloud
 x19= SELECT 0
@@ -144,6 +164,7 @@ y19 = SELECT 0
 data19 = SELECT name,count  from chart_demo.t_wordcloud
 style19 = {'word_size_range':[20, 100]}
 #---20---------------------------------箱形图
+switch20 = ON
 title20 = 箱形图
 chart_type20 = boxpolt
 x20= SELECT DISTINCT expr FROM chart_demo.t_boxpolt
@@ -151,6 +172,7 @@ y20 = SELECT DISTINCT ab FROM chart_demo.t_boxpolt
 data20 = SELECT expr,ab,counts  from chart_demo.t_boxpolt
 style20 = {}
 #---21---------------------------------涟漪特效散点图
+switch21 = ON
 title21 = 涟漪特效散点图
 chart_type21 = effectscatter
 x21= SELECT x FROM chart_demo.t_effectscatter order by id
@@ -158,6 +180,7 @@ y21 = SELECT 0
 data21 = SELECT counts  from chart_demo.t_effectscatter order by id
 style21 = {}
 #---22---------------------------------热力图
+switch22 = ON
 title22 = 热力图
 chart_type22 = heatmap
 x22= SELECT distinct time FROM chart_demo.t_heatmap
@@ -165,6 +188,7 @@ y22 = SELECT distinct week FROM chart_demo.t_heatmap
 data22 = SELECT time,week,temperature  from chart_demo.t_heatmap order by id
 style22 = {}
 #---23---------------------------------K线图
+switch23 = ON
 title23 = K线图
 chart_type23 = kline
 x23= SELECT date FROM chart_demo.t_kline  order by id
@@ -172,6 +196,7 @@ y23 = SELECT 0
 data23 = SELECT start_p,end_p,min_p,max_p  from chart_demo.t_kline order by id
 style23 = {}
 #---24---------------------------------象形柱状图
+switch24 = ON
 title24 = 象形柱状图
 chart_type24 = pictorialbar
 x24= SELECT distinct items  from chart_demo.t_pictorialbar order by items
@@ -179,6 +204,7 @@ y24 = SELECT name,images FROM chart_demo.t_symbol
 data24 = SELECT year,items,count  from chart_demo.t_pictorialbar order by year,items
 style24 = {}
 #---25---------------------------------散点图
+switch25 = ON
 title25 = 散点图
 chart_type25 = scatter
 x25= SELECT distinct items  from chart_demo.t_pictorialbar order by items
@@ -186,6 +212,7 @@ y25 = SELECT 0
 data25 = SELECT year,items,count  from chart_demo.t_pictorialbar order by year,items
 style25 = {}
 #---26---------------------------------层叠多图
+switch26 = ON
 title26 = 层叠多图
 chart_type26 = overlap
 x26= SELECT distinct month  from chart_demo.t_overlap order by id
@@ -193,6 +220,7 @@ y26 = SELECT 0
 data26 = SELECT evaporation,rainfall,temperature from chart_demo.t_overlap order by id
 style26 = {}
 #---27---------------------------------树图
+switch27 = ON
 title27 = 树图
 chart_type27 = tree
 x27= SELECT 0
@@ -202,6 +230,7 @@ style27 = {'orient':"LR"}
 #orient: LR左右,RL右左,TB上下,BT下上
 #orient: TB上下,BT下上  时需要配置: 'position':"top",'horizontal_align':"right",'vertical_align':"middle",'rotate':-90
 #---28---------------------------------矩形树图
+switch28 = ON
 title28 = 矩形树图
 chart_type28 = treemap
 x28 = SELECT "演示数据"
@@ -209,6 +238,7 @@ y28 = SELECT 0
 data28 = SELECT tree from chart_demo.t_treemap
 style28 = {}
 #---29---------------------------------地理坐标系
+switch29 = ON
 title29 = 地理坐标系
 chart_type29 = geo
 x29 = SELECT 'china'
@@ -217,6 +247,7 @@ data29 = SELECT province,counts from chart_demo.t_geo where country='china'
 style29 = {'is_piecewise':True,'ChartType':"HEATMAP"}
 #ChartType: None ,EFFECT_SCATTER,HEATMAP
 #---30---------------------------------地理坐标系广东
+switch30 = ON
 title30 = 地理坐标系广东
 chart_type30 = geo
 x30 = SELECT '广东'
@@ -224,6 +255,7 @@ y30 = SELECT 0
 data30 = SELECT city,counts from chart_demo.t_geo where province='广东' and city is not null
 style30 = {'is_piecewise':True,'ChartType':"EFFECT_SCATTER"}
 #---31---------------------------------地理坐标系3
+switch31 = ON
 title31 = 地理坐标系3
 chart_type31 = geo_lines
 x31 = SELECT 'china'
@@ -231,6 +263,7 @@ y31 = SELECT start,end from chart_demo.t_geoline
 data31 = SELECT province,counts from chart_demo.t_geo where country='china'
 style31 = {'symbol_size':6,'back_color':"#323c48", 'border_color':"#111", 'dot_color':"red",'line_color':"blue",'curve':0.2}
 #---32---------------------------------地图
+switch32 = ON
 title32 = 地图
 chart_type32 = map
 x32 = SELECT 'china','商家A'
@@ -238,6 +271,7 @@ y32 = SELECT 0
 data32 = SELECT province,counts from chart_demo.t_geo where country='china'
 style32 = {'is_show':False,'max_':200,'is_piecewise':True}
 #---33---------------------------------世界地图
+switch33 = ON
 title33 = 世界地图
 chart_type33 = map
 x33 = SELECT 'world','商家A'
@@ -245,6 +279,7 @@ y33 = SELECT 0
 data33 = SELECT country,counts from chart_demo.t_map 
 style33 = {'is_show':False,'max_':200,'is_piecewise':False}
 #---34---------------------------------广东地图
+switch34 = ON
 title34 = 广东地图
 chart_type34 = map
 x34 = SELECT '广东','商家A'
@@ -252,6 +287,7 @@ y34 = SELECT 0
 data34 = SELECT city,counts from chart_demo.t_geo where province='广东' and city is not null
 style34 = {'is_show':False,'max_':200,'is_piecewise':False}
 #---35---------------------------------3D柱状图
+switch35 = ON
 title35 = 3D柱状图
 chart_type35 = bar3d
 x35 = SELECT distinct time  from chart_demo.t_heatmap order by id 
@@ -259,6 +295,7 @@ y35 = SELECT distinct week  from chart_demo.t_heatmap order by id
 data35 = SELECT week, time,temperature  from chart_demo.t_heatmap order by id
 style35 = {'max_':80}
 #---36---------------------------------堆叠柱状图
+switch36 = ON
 title36 = 堆叠柱状图
 chart_type36 = bar3d_stack
 x36 = SELECT distinct time  from chart_demo.t_bar3d_stack order by id 
@@ -266,6 +303,7 @@ y36 = SELECT distinct week  from chart_demo.t_bar3d_stack order by id
 data36 = SELECT time,week,temperature  from chart_demo.t_bar3d_stack order by id
 style36 = {}
 #---37---------------------------------3D折线图
+switch37 = ON
 title37 = 3D折线图
 chart_type37 = line3d
 x37 = SELECT distinct time  from chart_demo.t_heatmap order by id 
@@ -273,6 +311,7 @@ y37 = SELECT distinct week  from chart_demo.t_heatmap order by id
 data37 = SELECT x,y,z  from chart_demo.t_line3d
 style37 = {'width':100, 'height':100, 'depth':100,'max_':30, 'min_':0,'is_rotate':True,'range_color':"#313695,#4575b4,#74add1,#abd9e9,#e0f3f8,#ffffbf,#fee090,#fdae61,#f46d43,#d73027,#a50026"}
 #---38---------------------------------3D散点图
+switch38 = ON
 title38 = 3D散点图
 chart_type38 = scatter3d
 x38 = SELECT '3D散点图'
@@ -280,6 +319,7 @@ y38 = SELECT 0
 data38 = SELECT time,week,temperature  from chart_demo.t_bar3d_stack order by id
 style38 = {'range_color':"#313695,#4575b4,#74add1,#abd9e9,#e0f3f8,#ffffbf,#fee090,#fdae61,#f46d43,#d73027,#a50026"}
 #---39---------------------------------3D曲面图
+switch39 = ON
 title39 = 3D曲面图
 chart_type39 = surface3d
 x39 = SELECT '3D曲面图'
@@ -287,9 +327,44 @@ y39 = SELECT 0
 data39 = SELECT x,y,z  from chart_demo.t_surface3d
 style39 = {'width':100, 'height':100, 'depth':100,'max_':3, 'min_':-3,'range_color':"#313695,#4575b4,#74add1,#abd9e9,#e0f3f8,#ffffbf,#fee090,#fdae61,#f46d43,#d73027,#a50026"}
 #---40---------------------------------地球地图
+switch40 = ON
 title40 = 地球地图
 chart_type40 = mapglobe
 x40 = SELECT 'World Population'
 y40 = SELECT 0
 data40 = SELECT country,value from chart_demo.t_mapglobe
 style40 = {'maptype':"world",'is_map_symbol_show':False,'is_show':False,'is_calculable':True,'range_color':"lightskyblue,yellow,orangered"}
+#---41---------------------------------grid_vertical
+switch41 = ON
+title41 = Grid
+chart_type41 = grid_vertical
+chart_count41 = 2
+title41_1 = Grid-Bar
+chart_type41_1 = bar
+x41_1 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+y41_1 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
+data41_1 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+style41_1 = {'grid_pos_bottom':"60%%"}
+title41_2 = Grid-Line
+chart_type41_2 = line
+x41_2 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
+y41_2 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+data41_2 = SELECT date,area,amount FROM chart_demo.t_chart1
+style41_2 = {'title_pos_top':"48%%",'legend_pos_top':"48%%",'grid_pos_top':"60%%"}
+#---42---------------------------------grid_horizontal
+switch42 = ON
+title42 = Grid
+chart_type42 = grid_horizontal
+chart_count42 = 2
+title42_1 = Grid-Bar
+chart_type42_1 = bar
+x42_1 = SELECT DISTINCT area FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+y42_1 = SELECT  STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')
+data42_1 = SELECT area,DATE_FORMAT(date, '%%Y-%%m-%%d'),amount FROM chart_demo.t_chart1 WHERE  date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+style42_1 = {'title_pos_right':"5%%",'legend_pos_right':"20%%",'grid_pos_right':"55%%"}
+title42_2 = Grid-Line
+chart_type42_2 = line
+x42_2 = SELECT DISTINCT date FROM chart_demo.t_chart1 order by date
+y42_2 = SELECT DISTINCT area FROM chart_demo.t_chart1 where date = STR_TO_DATE('2019-11-11','%%Y-%%m-%%d')  ORDER BY amount DESC
+data42_2 = SELECT date,area,amount FROM chart_demo.t_chart1
+style42_2 = {'title_pos_left':"5%%",'legend_pos_left':"10%%",'grid_pos_left':"55%%"}
